--- a/login/index.HTML
+++ b/login/index.HTML
@@ -7,10 +7,10 @@
  <link rel="stylesheet"href="styles.css">
  <title>DevClub Login</title>                                                       
 <body>
-    <main class="container">
-        <form><
-            <h1>login devclub</h1>
-            <div class="Input-Box">   
+  <main class="container">
+  <form><     <h1>login devclub</h1>
+    <img src="ChatGPT Image 26 de fev. de 2026, 00_10_36.png" alt="login">
+       <div class="Input-Box">   
                 <input placeholder="USUARIO" type="email">
                 <i class="bx bxs-user"></i>
             </div>
