--- a/login/index.HTML
+++ b/login/index.HTML
@@ -27,7 +27,7 @@
                         <a href="#"ESQUECI MINHA SENHA</a>
                             <div>
 
-                                <button type="submit">LOGIN</button>
+                                <button type="submit">Login</button>
 
                                 <div class="REGISTER-LINK">
                                     <P>NAO TEM UMA CONTA? <a href="#">CADASTRE-SE</a></P>
