--- a/login/index.HTML
+++ b/login/index.HTML
@@ -9,7 +9,7 @@
 <body>
   <main class="container">
   <form><     <h1>login devclub</h1>
-    <img src="ChatGPT Image 26 de fev. de 2026, 00_10_36.png" alt="login">
+    <img src=
        <div class="Input-Box">   
                 <input placeholder="USUARIO" type="email">
                 <i class="bx bxs-user"></i>
@@ -30,7 +30,7 @@
                                 <button type="submit">Login</button>
 
                                 <div class="REGISTER-LINK">
-                                    <P>NAO TEM UMA CONTA? <a href="#">CADASTRE-SE</a></P>
+                                    <p>NAO TEM UMA CONTA? <a href="#">CADASTRE-SE</a></p>
 
                     </label>
                 </label>
